--- a/index.html
+++ b/index.html
@@ -1,36 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<!DOCTYPE html>
-<html lang="es">
-    Header
-  ============================-->
-  <header id="header">
-    <div class="container">
-  <div id="logo" class="logo-container">
-    <a href="#intro" class="scrollto">
-        <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento" title="">
-    </a>
-    <div>
-        <span class="logo-text">Laser</span>
-    </div>
-</div>
-      <nav id="nav-menu-container">
-      <ul class="nav-menu">
-    <li class="menu-active"><a href="#intro">Inicio</a></li>
-    <li><a href="#about">Acerca de</a></li>
-    <li><a href="#speakers">Ponentes</a></li>
-    <li><a href="#schedule">Programa</a></li>
-    <li><a href="#venue">Lugar</a></li>
-    <li><a href="#hotels">Hoteles</a></li>
-    <li><a href="#gallery">Galería</a></li>
-    <li><a href="#supporters">Patrocinadores</a></li>
-    <li><a href="#contact">Contacto</a></li>
-    <li class="buy-tickets"><a href="#buy-tickets">Comprar Entradas</a></li>
-</ul>
 
-      </nav><!-- #nav-menu-container -->
+<head>
+  <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+
+  <title>TheEvent Bootstrap Template - Index</title>
+  <meta content="" name="description">
+  <meta content="" name="keywords">
+
+  <!-- Favicons -->
+  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
+
+  <!-- Vendor CSS Files -->
+  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="assets/css/style.css" rel="stylesheet">
+</head>
+
+<body>
+
+  <!-- ======= Header ======= -->
+  <header id="header" class="d-flex align-items-center">
+    <div class="container-fluid container-xxl d-flex align-items-center">
+
+      <!-- Logo con texto en español -->
+      <div id="logo" class="me-auto">
+        <!-- Link back to the home or intro section -->
+        <a href="#intro" class="scrollto"><img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento" title=""></a>
+        <span class="logo-text">Laser</span> <!-- Texto del logo en español -->
+      </div>
+
+      <!-- Navigation Bar -->
+      <nav id="navbar" class="navbar order-last order-lg-0">
+        <ul>
+          <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
+          <li><a class="nav-link scrollto" href="#about">Acerca de</a></li>
+          <li><a class="nav-link scrollto" href="#speakers">Ponentes</a></li>
+          <li><a class="nav-link scrollto" href="#schedule">Programa</a></li>
+          <li><a class="nav-link scrollto" href="#venue">Lugar</a></li>
+          <li><a class="nav-link scrollto" href="#hotels">Hoteles</a></li>
+          <li><a class="nav-link scrollto" href="#gallery">Galería</a></li>
+          <li><a class="nav-link scrollto" href="#supporters">Patrocinadores</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
+        </ul>
+        <i class="bi bi-list mobile-nav-toggle"></i>
+      </nav><!-- .navbar -->
+      <a class="buy-tickets scrollto" href="#buy-tickets">Comprar Entradas</a>
+
     </div>
-  </header><!-- #header -->
+  </header><!-- End Header -->
   <!--==========================
     Intro Section
   ============================-->
