--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                   <img src="https://i.postimg.cc/dV88H1Bc/Screenshot-2024-01-18-023837.png" alt="Dra. Flor Arriaga" class="img-fluid">
                   <div class="details">
                       <h3><a href="speaker-details.html">Dra. Flor Arriaga</a></h3>
-                      <!-- Additional details for Dra. Flor Arriaga -->
+                      <p>Especializada en Odontopediatria</p> 
                       <!-- Social Media Icons -->
                   </div>
               </div>
@@ -542,7 +542,7 @@
   <div class="container" data-aos="fade-up">
 
     <div class="section-header">
-      <h2>Compra de Entradas</h2>
+      <h2>Entradas</h2>
       <p>Consigue tu entrada para el evento con tarifas preferenciales antes del cierre.</p>
     </div>
 
@@ -554,16 +554,7 @@
             <h5 class="card-title text-muted text-uppercase text-center">Acceso Estándar</h5>
             <h6 class="card-price text-center">Costo preferencial de inscripción antes del 30 de marzo: $15,000</h6>
             <h6 class="card-price text-center">Costo normal: $18,000</h6>
-            <hr>
-            <ul class="fa-ul">
-              <li><span class="fa-li"><i class="fa fa-check"></i></span>Asiento Regular</li>
-              <li><span class="fa-li"><i class="fa fa-check"></i></span>Coffee Break</li>
-              <li><span class="fa-li"><i class="fa fa-check"></i></span>Distintivo Personalizado</li>
-              <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Acceso a la Comunidad</li>
-              <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>Acceso a Talleres</li>
-              <li class="text-muted"><span class="fa-li"><i class="fa fa-times"></i></span>After Party</li>
-            </ul>
-            <hr>
+           
             <div class="text-center">
               <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="standard-access">Comprar Ahora</button>
             </div>
