--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a class="buy-tickets scrollto" href="#buy-tickets">Comprar Entradas</a>
+      <a class="buy-tickets scrollto" href="#buy-tickets">Entradas</a>
 
     </div>
   </header><!-- End Header -->
