--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>TheEvent Bootstrap Template - Index</title>
+    <title>Láser en medicina</title>
     <meta content="" name="description">
     <meta content="" name="keywords">
 
@@ -44,21 +44,20 @@
         <div id="logo" class="me-auto">
           <!-- Uncomment below if you prefer to use a text logo -->
           <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
-          <a href="index.html" class="scrollto"><img src="assets/img/logo.png" alt="" title=""></a>
+          <a href="index.html" class="scrollto"><img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="" title=""></a>
         </div>
 
         <nav id="navbar" class="navbar order-last order-lg-0">
-          <ul>
-            <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
-            <li><a class="nav-link scrollto" href="#about">About</a></li>
-            <li><a class="nav-link scrollto" href="#speakers">Speakers</a></li>
-            <li><a class="nav-link scrollto" href="#schedule">Schedule</a></li>
-            <li><a class="nav-link scrollto" href="#venue">Venue</a></li>
-            <li><a class="nav-link scrollto" href="#hotels">Hotels</a></li>
-            <li><a class="nav-link scrollto" href="#gallery">Gallery</a></li>
-            <li><a class="nav-link scrollto" href="#supporters">Sponsors</a></li>
-            <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
+         <ul>
+          <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
+          <li><a class="nav-link scrollto" href="#about">Acerca de</a></li>
+          <li><a class="nav-link scrollto" href="#speakers">Ponentes</a></li>
+          <li><a class="nav-link scrollto" href="#schedule">Programa</a></li>
+          <li><a class="nav-link scrollto" href="#venue">Lugar</a></li>
+          <li><a class="nav-link scrollto" href="#hotels">Hoteles</a></li>
+          <li><a class="nav-link scrollto" href="#gallery">Galería</a></li>
+          <li><a class="nav-link scrollto" href="#supporters">Patrocinadores</a></li>
+         </ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
@@ -122,10 +121,13 @@
         </div>
       </div>
     </section><!-- End About Section -->
+
+  
  <!-- ======= Speakers Section ======= -->
 <section id="speakers" class="wow fadeInUp">
   <div class="container">
       <div class="section-header">
+        
           <h2>Ponentes invitados</h2>
           <p>Estos serán nuestros Ponentes</p>
       </div>
