--- a/index.html
+++ b/index.html
@@ -58,26 +58,10 @@
           <li><a class="nav-link scrollto" href="#gallery">Galería</a></li>
           <li><a class="nav-link scrollto" href="#supporters">Patrocinadores</a></li>
          </ul>
-              <li><a href="#">Drop Down 1</a></li>
-              <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
-            </ul>
-          </li> -->
-            <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          </ul>
+           
           <i class="bi bi-list mobile-nav-toggle"></i>
         </nav><!-- .navbar -->
-        <a class="buy-tickets scrollto" href="#buy-tickets">Buy Tickets</a>
+        <a class="buy-tickets scrollto" href="#buy-tickets">Entradas</a>
 
       </div>
     </header><!-- End Header -->
