--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <meta content="" name="keywords">
 
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+    <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="icon">
+    <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
@@ -588,7 +588,7 @@
 
         <div class="col-lg-3 col-md-6 footer-info">
           <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento">
-          <p>Derechos reservados con los abogados.</p>
+          <p>Derechos reservados.</p>
         </div>
 
         <div class="col-lg-3 col-md-6 footer-links">
@@ -602,17 +602,7 @@
           </ul>
         </div>
 
-        <div class="col-lg-3 col-md-6 footer-links">
-          <h4>Enlaces Útiles</h4>
-          <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Acerca de</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Servicios</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Términos de servicio</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Política de privacidad</a></li>
-          </ul>
-        </div>
-
+     
         <div class="col-lg-3 col-md-6 footer-contact">
           <h4>Contáctanos</h4>
           <p>
