--- a/index.html
+++ b/index.html
@@ -565,8 +565,8 @@
             <h6 class="card-price text-center">Costo preferencial de inscripción antes del 30 de marzo: $15,000</h6>
             <h6 class="card-price text-center">Costo normal: $18,000</h6>
            
-            <div class="text-center">
-              <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="standard-access">Comprar Ahora</button>
+            <div class="text-center"> <!-- Esta clase ya debería centrar el botón adecuadamente -->
+            <button type="button" class="btn buy-" data-bs-toggle="modal" data-bs-target="#buy-ticket-modal" data-ticket-type="standard-access">Comprar Ahora</button>
             </div>
           </div>
         </div>
