--- a/speaker-details.html
+++ b/speaker-details.html
@@ -1,42 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+  <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <title>Laser en Medicina</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <head>
+    <meta charset="utf-8">
+    <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <!-- Favicons -->
-  <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="icon">
-  <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="apple-touch-icon">
+    <title>Láser en medicina</title>
+    <meta content="" name="description">
+    <meta content="" name="keywords">
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
+    <!-- Favicons -->
+    <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="icon">
+    <link href="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" rel="apple-touch-icon">
 
-  <!-- Vendor CSS Files -->
-  <link href="assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Raleway:300,400,500,700,800" rel="stylesheet">
 
-  <!-- Template Main CSS File -->
-  <link href="assets/css/style.css" rel="stylesheet">
-</head>
+    <!-- Vendor CSS Files -->
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
-<body>
+    <!-- Template Main CSS File -->
+    <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- ======= Header ======= -->
-  <header id="header" class="d-flex align-items-center">
-    <div class="container d-flex align-items-center justify-content-between">
-      <div id="logo">
-        <a href="index.html"><img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento"></a>
-      </div>
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto active" href="#intro">Inicio</a></li>
+    <!-- =======================================================
+    * Template Name: TheEvent
+    * Updated: Feb 06 2024 with Bootstrap v5.3.2
+    * Template URL: https://bootstrapmade.com/theevent-conference-event-bootstrap-template/
+    * Author: BootstrapMade.com
+    * License: https://bootstrapmade.com/license/
+    ======================================================== -->
+  </head>
+
+  <body>
+
+    <!-- ======= Header ======= -->
+    <header id="header" class="d-flex align-items-center ">
+      <div class="container-fluid container-xxl d-flex align-items-center">
+
+        <div id="logo" class="me-auto">
+          <!-- Uncomment below if you prefer to use a text logo -->
+          <!-- <h1><a href="index.html">The<span>Event</span></a></h1>-->
+          <a href="index.html" class="scrollto"><img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="" title=""></a>
+        </div>
+
+        <nav id="navbar" class="navbar order-last order-lg-0">
+         <ul>
+          <li><a class="nav-link scrollto active" href="#hero">Inicio</a></li>
           <li><a class="nav-link scrollto" href="#about">Acerca de</a></li>
           <li><a class="nav-link scrollto" href="#speakers">Ponentes</a></li>
           <li><a class="nav-link scrollto" href="#schedule">Programa</a></li>
@@ -44,14 +57,14 @@
           <li><a class="nav-link scrollto" href="#hotels">Hoteles</a></li>
           <li><a class="nav-link scrollto" href="#gallery">Galería</a></li>
           <li><a class="nav-link scrollto" href="#supporters">Patrocinadores</a></li>
-          <li><a class="nav-link scrollto" href="#contact">Contacto</a></li>
-          <li class="buy-tickets"><a href="#buy-tickets">Comprar Entradas</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-    </div>
-  </header><!-- End Header -->
+         </ul>
+           
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav><!-- .navbar -->
+        <a class="buy-tickets scrollto" href="#buy-tickets">Entradas</a>
 
+      </div>
+    </header><!-- End Header -->
  
 <main id="main" class="main-page">
   <section id="speakers-details" class="wow fadeIn">
