--- a/index.html
+++ b/index.html
@@ -580,18 +580,19 @@
 
   </div>
 </section><!-- End Buy Ticket Section -->
-<!-- ======= Footer ======= -->
 <footer id="footer">
   <div class="footer-top">
     <div class="container">
       <div class="row">
 
-        <div class="col-lg-3 col-md-6 footer-info">
+        <!-- Logo e información del evento -->
+        <div class="col-lg-4 col-md-6 footer-info">
           <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento">
           <p>Derechos reservados.</p>
         </div>
 
-        <div class="col-lg-3 col-md-6 footer-links">
+        <!-- Enlaces útiles -->
+        <div class="col-lg-4 col-md-6 footer-links">
           <h4>Enlaces Útiles</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
@@ -602,17 +603,16 @@
           </ul>
         </div>
 
-     
-        <div class="col-lg-3 col-md-6 footer-contact">
+        <!-- Información de contacto -->
+        <div class="col-lg-4 col-md-6 footer-contact">
           <h4>Contáctanos</h4>
           <p>
-            Anillo Periférico Ecológico 3507 Torres Médicas Angelópolis, <br>
+            Anillo Periférico Ecológico 3507 Torres Médicas Angelópolis,<br>
             72821 San Bernardino Tlaxcalancingo, Pue.<br>
             México <br>
             <strong>Teléfono:</strong> +52 2222393453<br>
             <strong>Email:</strong> mayerandreas3@gmail.com<br>
           </p>
-
           <div class="social-links">
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -620,22 +620,13 @@
             <a href="#" class="google-plus"><i class="bi bi-instagram"></i></a>
             <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
-
         </div>
 
       </div>
     </div>
   </div>
-
-  <div class="container">
-    <div class="copyright">
-      &copy; Derechos de Autor <strong>Laser en Medicina</strong>. Todos los Derechos Reservados
-    </div>
-    <div class="credits">
-      Diseñado por <a href="https://bootstrapmade.com/">BootstrapMade</a>
-    </div>
-  </div>
-</footer><!-- End Footer
+  <!-- Resto del footer -->
+</footer>
 
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
