--- a/index.html
+++ b/index.html
@@ -580,10 +580,16 @@
 
   </div>
 </section><!-- End Buy Ticket Section -->
-< id="footer">
+<footer id="footer">
   <div class="footer-top">
     <div class="container">
       <div class="row">
+
+        <!-- Logo e información del evento -->
+        <div class="col-lg-4 col-md-6 footer-info">
+          <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento">
+          <p>Derechos reservados.</p>
+        </div>
 
         <!-- Enlaces útiles -->
         <div class="col-lg-4 col-md-6 footer-links">
@@ -621,6 +627,7 @@
   </div>
   <!-- Resto del footer -->
 </footer>
+
 
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
