--- a/index.html
+++ b/index.html
@@ -580,19 +580,13 @@
 
   </div>
 </section><!-- End Buy Ticket Section -->
-<footer id="footer">
+  <footer id="footer">
   <div class="footer-top">
     <div class="container">
-      <div class="row">
-
-        <!-- Logo e información del evento -->
-        <div class="col-lg-4 col-md-6 footer-info">
-          <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento">
-          <p>Derechos reservados.</p>
-        </div>
+      <div class="row justify-content-center">
 
         <!-- Enlaces útiles -->
-        <div class="col-lg-4 col-md-6 footer-links">
+        <div class="col-lg-6 col-md-6 footer-links">
           <h4>Enlaces Útiles</h4>
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
@@ -604,7 +598,7 @@
         </div>
 
         <!-- Información de contacto -->
-        <div class="col-lg-4 col-md-6 footer-contact">
+        <div class="col-lg-6 col-md-6 footer-contact">
           <h4>Contáctanos</h4>
           <p>
             Anillo Periférico Ecológico 3507 Torres Médicas Angelópolis,<br>
@@ -617,7 +611,6 @@
             <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
             <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
             <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="google-plus"><i class="bi bi-instagram"></i></a>
             <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
           </div>
         </div>
@@ -625,8 +618,17 @@
       </div>
     </div>
   </div>
-  <!-- Resto del footer -->
+
+  <div class="container d-md-flex py-4">
+    <div class="mr-md-auto text-center text-md-left">
+      &copy; Derechos de Autor <strong>Laser en Medicina</strong>. Todos los Derechos Reservados
+    </div>
+    <div class="social-links text-center text-md-right pt-3 pt-md-0">
+      Diseñado por <a href="https://bootstrapmade.com/" class="twitter"><i class="bx bxl-twitter"></i></a>
+    </div>
+  </div>
 </footer>
+
 
 
 
