--- a/index.html
+++ b/index.html
@@ -621,10 +621,19 @@
 
   <div class="container d-md-flex py-4">
     <div class="mr-md-auto text-center text-md-left">
-      &copy; Derechos de Autor <strong>Laser en Medicina</strong>. Todos los Derechos Reservados
+      &copy; Derechos de Autor <strong>Laser en Medicina</strong>
     </div>
     <div class="social-links text-center text-md-right pt-3 pt-md-0">
       Diseñado por <a href="https://bootstrapmade.com/" class="twitter"><i class="bx bxl-twitter"></i></a>
+      <div class="credits">
+        <!--
+        All the links in the footer should remain intact.
+        You can delete the links only if you purchased the pro version.
+        Licensing information: https://bootstrapmade.com/license/
+        Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=TheEvent
+      -->
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+      </div>
     </div>
   </div>
 </footer>
