--- a/index.html
+++ b/index.html
@@ -85,24 +85,26 @@
 
 
     <!-- ======= About Section ======= -->
-    <section id="about">
-      <div class="container position-relative" data-aos="fade-up">
-        <div class="row">
-          <div class="col-lg-6">
-            <h2>Acerca del evento</h2>
-            <p>El potencial transformador de la tecnología láser en medicina es innegable, y va mucho más allá de sus actuales funciones destacadas en cirugía ocular, procedimientos dentales y cirugía general. Invitamos a médicos de diversas especialidades a participar en un esclarecedor curso introductorio que desvela el amplio espectro de aplicaciones que ofrece el láser. Desde la dermatología a la oncología, los láseres exhiben versatilidad, ofreciendo intervenciones precisas con menor pérdida de sangre y tiempos de recuperación más rápidos. Aunque las ventajas son evidentes, reconocer las desventajas garantiza una toma de decisiones informada. Únase a nosotros para explorar cómo la tecnología láser puede revolucionar su consulta, fomentando la colaboración y mejorando los resultados de los pacientes. Aproveche esta oportunidad para mantenerse a la vanguardia de la innovación médica y mejorar su experiencia en diversas disciplinas.</p>
-          </div>
-          <div class="col-lg-3">
-            <h3>Donde</h3>
-            <p>Hospital MAC Puebla</p>
-          </div>
-          <div class="col-lg-3">
-            <h3>Cuando</h3>
-            <p>Sesión de preparación, Viernes & Sábado<br>20, 26 y 27 de abril</p>
-          </div>
-        </div>
+ <section id="about">
+  <div class="container position-relative" data-aos="fade-up">
+    <div class="row">
+      <div class="col-lg-6">
+        <h2>Acerca de nosotros</h2>
+        <p>Este curso devela un amplio espectro de uso en la práctica diaria de diferentes sistemas de láser, desde la dermatología hasta la oncología, donde las ventajas de trabajo a nivel celular nos facilita cada momento de nuestro día a día, ayudándonos a tomar decisiones científicamente cimentadas.</p>
+        <p>En la investigación podremos adquirir la información para ser autocríticos en la extensa literatura que existe en esta área para poder seguir aumentando nuestro conocimiento.</p>
       </div>
-    </section><!-- End About Section -->
+      <div class="col-lg-3">
+        <h3>Dónde</h3>
+        <p>Hospital MAC Puebla</p>
+      </div>
+      <div class="col-lg-3">
+        <h3>Cuándo</h3>
+        <p>26 - 27 de Abril 2024</p>
+      </div>
+    </div>
+  </div>
+</section><!-- End About Section -->
+
 
   
  <!-- ======= Speakers Section ======= -->
