--- a/index.html
+++ b/index.html
@@ -177,69 +177,103 @@
 
     <h3 class="sub-heading" data-aos="fade-up" data-aos-delay="150">Explore nuestra agenda detallada a continuación para descubrir una serie de sesiones informativas y enriquecedoras diseñadas para ampliar su conocimiento y experiencia.</h3>
 
-    <div class="tab-content row justify-content-center" data-aos="fade-up" data-aos-delay="200">
-      <!-- Schedule Day SÁBADO 20 DE ABRIL -->
-      <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-4">
-        <!-- Eventos del SÁBADO 20 DE ABRIL -->
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>09:25 AM</time></div>
-          <div class="col-md-10">
-            <h4>Registro y conexión vía videoconferencia</h4>
-          </div>
-        </div>
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>09:30 AM</time></div>
-          <div class="col-md-10">
-            <h4>Presentación del Curso <span>Dra. Flor Arriaga</span></h4>
-          </div>
-        </div>
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>10:50 AM</time></div>
-          <div class="col-md-10">
-            <h4>Introducción a la física de la Luz y al conocimiento básico de los equipos láser <span>Marc Cuellar, MSc.</span></h4>
-          </div>
-        </div>
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>12:00 PM</time></div>
-          <div class="col-md-10">
-            <h4>Interacción de la luz y las células <span>Dra. Flor Arriaga</span></h4>
-          </div>
-        </div>
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>01:00 PM</time></div>
-          <div class="col-md-10">
-            <h4>Asignación de material de lectura y preparación para curso</h4>
-          </div>
-        </div>
+   <!-- Schedule Day SÁBADO 20 DE ABRIL -->
+<div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-4">
+  <!-- Eventos del SÁBADO 20 DE ABRIL -->
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>09:25 AM</time></div>
+    <div class="col-md-10">
+      <h4>Registro y conexión vía videoconferencia</h4>
+      <p>Comienza tu jornada conectándote con colegas y facilitadores del curso.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>09:30 AM</time></div>
+    <div class="col-md-10">
+      <h4>Presentación del Curso <span>Dra. Flor Arriaga</span></h4>
+      <p>Introducción al curso y objetivos de aprendizaje por parte de la Dra. Arriaga.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>10:50 AM</time></div>
+    <div class="col-md-10">
+      <h4>Introducción a la física de la Luz y al conocimiento básico de los equipos láser <span>Marc Cuellar, MSc.</span></h4>
+      <p>Un vistazo a los principios fundamentales que rigen la tecnología láser en medicina.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>12:00 PM</time></div>
+    <div class="col-md-10">
+      <h4>Interacción de la luz y las células <span>Dra. Flor Arriaga</span></h4>
+      <p>Exploración de cómo la luz láser afecta a las células y tejidos humanos.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>01:00 PM</time></div>
+    <div class="col-md-10">
+      <h4>Asignación de material de lectura y preparación para curso</h4>
+      <p>Recepción de materiales educativos y guía para la preparación previa a las sesiones prácticas.</p>
+    </div>
+  </div>
+</div>
+<!-- End Schedule Day SÁBADO 20 DE ABRIL -->
+<!-- Schedule Day VIERNES 26 DE ABRIL -->
+<div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
+  <!-- Eventos del VIERNES 26 DE ABRIL -->
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>08:30 AM</time></div>
+    <div class="col-md-10">
+      <h4>Introducción y bienvenida</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>09:00 AM</time></div>
+    <div class="col-md-10">
+      <div class="speaker">
+        <h4>El espectro electromagnético y tecnología láser, Modalidades de interacción con los tejidos biológicos</h4>
+        <span>Dr. Pedro Martínez</span>
       </div>
-      <!-- End Schedule Day SÁBADO 20 DE ABRIL -->
-
-      <!-- Schedule Day VIERNES 26 DE ABRIL -->
-      <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
-        <!-- Eventos del VIERNES 26 DE ABRIL -->
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>08:30 AM</time></div>
-          <div class="col-md-10">
-            <h4>Introducción y bienvenida</h4>
-          </div>
-        </div>
-        <div class="row schedule-item">
-          <div class="col-md-2"><time>09:00 AM</time></div>
-          <div class="col-md-10">
-            <h4>El espectro electromagnético y tecnología láser, Modalidades de interacción con los tejidos biológicos <span>Dr. Pedro Martínez</span></h4>
-          </div>
-        </div>
-        <!-- ... (otros eventos de este día, siguiendo el mismo formato) -->
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>11:00 AM</time></div>
+    <div class="col-md-10">
+      <h4>Pausa</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>11:20 AM</time></div>
+    <div class="col-md-10">
+      <h4>Técnicas y procedimientos en distintas especialidades médico-quirúrgicas y en el ámbito de las Ciencias de la Salud</h4>
+      <span>Dra. Pilar Martín interviniendo</span>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>01:30 PM</time></div>
+    <div class="col-md-10">
+      <h4>Comida</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>02:30 PM</time></div>
+    <div class="col-md-10">
+      <div class="speaker">
+        <h4>El láser - uso médico-quirúrgico y terapéutico</h4>
+        <p>Especialidades: Oftalmología, Ginecología, Urología, Medicina Deportiva, Neurología, Oncología, Otorrinolaringología, Ortopedia y Traumatología, entre otras.</p>
+        <span>Dra. Pilar Martín</span>
       </div>
-      <!-- End Schedule Day VIERNES 26 DE ABRIL -->
-
-    <!-- Schedule Day SÁBADO 27 DE ABRIL 2024 -->
+    </div>
+  </div>
+</div>
+<!-- End Schedule Day VIERNES 26 DE ABRIL -->
+<!-- Schedule Day SÁBADO 27 DE ABRIL 2024 -->
 <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-6" data-aos="fade-up" data-aos-delay="200">
   <!-- Eventos del SÁBADO 27 DE ABRIL 2024 -->
   <div class="row schedule-item">
     <div class="col-md-2"><time>09:00 AM</time></div>
     <div class="col-md-10">
-      <h4>El láser - uso médico-quirúrgico y terapéutico en intervenciones dermoestéticas <span>Dra. Pilar Martín</span></h4>
+      <h4>El láser - uso médico-quirúrgico y terapéutico en intervenciones dermoestéticas</h4>
+      <span>Dra. Pilar Martín</span>
       <p>Aplicación en Atenuación de cicatrices, Lifting facial, Rejuvenecimiento vaginal, Tratamiento de hemangiomas, Telangiectasias, Verrugas.</p>
     </div>
   </div>
@@ -252,7 +286,8 @@
   <div class="row schedule-item">
     <div class="col-md-2"><time>12:00 PM</time></div>
     <div class="col-md-10">
-      <h4>Prácticas preclínicas <span>Dra. Pilar Martín y Dra. Flor Arriaga</span></h4>
+      <h4>Prácticas preclínicas</h4>
+      <span>Dra. Pilar Martín y Dra. Flor Arriaga</span>
       <p>Láseres terapéuticos (diodo) 560nm, 658nm, 660nm, 810nm, 940nm, 980nm.</p>
     </div>
   </div>
@@ -265,7 +300,8 @@
   <div class="row schedule-item">
     <div class="col-md-2"><time>02:30 PM</time></div>
     <div class="col-md-10">
-      <h4>Prácticas continuación <span>Dra. Pilar Martín y Dra. Flor Arriaga</span></h4>
+      <h4>Prácticas continuación</h4>
+      <span>Dra. Pilar Martín y Dra. Flor Arriaga</span>
       <p>Láser Quirúrgicos (Erbio:YAG (2940nm, 1645nm), Er:Cr/YSGG (2780nm), CO2 (10,000nm).</p>
     </div>
   </div>
