--- a/index.html
+++ b/index.html
@@ -267,22 +267,48 @@
 <!-- End Schedule Day VIERNES 26 DE ABRIL -->
 
 
-    <!-- Tab para el SÁBADO 27 DE ABRIL 2024 -->
-    <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-6">
-      <!-- Eventos del SÁBADO 27 DE ABRIL 2024 -->
-      <div class="row schedule-item">
-        <div class="col-md-2"><time>09:00 AM</time></div>
-        <div class="col-md-10">
-          <h4>El láser - uso médico-quirúrgico y terapéutico en intervenciones dermoestéticas <span>Dra. Pilar Martín</span></h4>
-          <p>Aplicación en Atenuación de cicatrices, Lifting facial, Rejuvenecimiento vaginal, Tratamiento de hemangiomas, Telangiectasias, Verrugas.</p>
-        </div>
-      </div>
-      <!-- (Continuar con los siguientes eventos del día en el mismo formato) -->
+ <!-- Schedule Day VIERNES 26 DE ABRIL -->
+<div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
+  <!-- Eventos del VIERNES 26 DE ABRIL -->
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>08:30 AM</time></div>
+    <div class="col-md-10">
+      <h4>Introducción y bienvenida</h4>
     </div>
-    <!-- End Tab para el SÁBADO 27 DE ABRIL 2024 -->
   </div>
-</section>
-<!-- End Schedule Section -->
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>09:00 AM</time></div>
+    <div class="col-md-10">
+      <h4>El espectro electromagnético y tecnología láser, Modalidades de interacción con los tejidos biológicos <span>Dr. Pedro Martínez</span></h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>11:00 AM</time></div>
+    <div class="col-md-10">
+      <h4>Pausa</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>11:20 AM</time></div>
+    <div class="col-md-10">
+      <h4>Técnicas y procedimientos en distintas especialidades médico-quirúrgicas y en el ámbito de las Ciencias de la Salud <span>Dra. Pilar Martín</span></h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>01:30 PM</time></div>
+    <div class="col-md-10">
+      <h4>Comida</h4>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>02:30 PM</time></div>
+    <div class="col-md-10">
+      <h4>El láser - uso médico-quirúrgico y terapéutico <span>Dra. Pilar Martín</span></h4>
+      <p>Especialidades: Oftalmología, Ginecología, Urología, Medicina Deportiva, Neurología, Oncología, Otorrinolaringología, Ortopedia y Traumatología, entre otras.</p>
+    </div>
+  </div>
+</div>
+<!-- End Schedule Day VIERNES 26 DE ABRIL -->
 
 
 
