--- a/index.html
+++ b/index.html
@@ -178,140 +178,49 @@
 
     <h3 class="sub-heading" data-aos="fade-up" data-aos-delay="150">Explore nuestra agenda detallada a continuación para descubrir una serie de sesiones informativas y enriquecedoras diseñadas para ampliar su conocimiento y experiencia.</h3>
 
-    <!-- Contenidos del Tab para cada día -->
-    <!-- Tab para el SÁBADO 20 DE ABRIL -->
-   <!-- Schedule Day SÁBADO 20 DE ABRIL -->
-<div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-4">
-  <!-- Eventos del SÁBADO 20 DE ABRIL -->
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>09:25 AM</time></div>
-    <div class="col-md-10">
-      <h4>Registro y conexión vía videoconferencia</h4>
-      <p>Comienza tu jornada conectándote con colegas y facilitadores del curso.</p>
+   <!-- Schedule Day SÁBADO 27 DE ABRIL 2024 -->
+    <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-6">
+      <!-- Eventos del SÁBADO 27 DE ABRIL 2024 -->
+      <div class="row schedule-item">
+        <div class="col-md-2"><time>09:00 AM</time></div>
+        <div class="col-md-10">
+          <h4>El láser - uso médico-quirúrgico y terapéutico en intervenciones dermoestéticas <span>Dra. Pilar Martín</span></h4>
+          <p>Aplicación en Atenuación de cicatrices, Lifting facial, Rejuvenecimiento vaginal, Tratamiento de hemangiomas, Telangiectasias, Verrugas.</p>
+        </div>
+      </div>
+      <div class="row schedule-item">
+        <div class="col-md-2"><time>11:30 AM</time></div>
+        <div class="col-md-10">
+          <h4>Pausa</h4>
+        </div>
+      </div>
+      <div class="row schedule-item">
+        <div class="col-md-2"><time>12:00 PM</time></div>
+        <div class="col-md-10">
+          <h4>Prácticas preclínicas <span>Dra. Pilar Martín y Dra. Flor Arriaga</span></h4>
+          <p>Láseres terapéuticos (diodo) 560nm, 658nm, 660nm, 810nm, 940nm, 980nm.</p>
+        </div>
+      </div>
+      <div class="row schedule-item">
+        <div class="col-md-2"><time>01:30 PM</time></div>
+        <div class="col-md-10">
+          <h4>Comida</h4>
+        </div>
+      </div>
+      <div class="row schedule-item">
+        <div class="col-md-2"><time>02:30 PM</time></div>
+        <div class="col-md-10">
+          <h4>Prácticas continuación <span>Dra. Pilar Martín y Dra. Flor Arriaga</span></h4>
+          <p>Láser Quirúrgicos (Erbio:YAG (2940nm, 1645nm), Er:Cr/YSGG (2780nm), CO2 (10,000nm).</p>
+        </div>
+      </div>
     </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>09:30 AM</time></div>
-    <div class="col-md-10">
-      <h4>Presentación del Curso <span>Dra. Flor Arriaga</span></h4>
-      <p>Introducción al curso y objetivos de aprendizaje por parte de la Dra. Arriaga.</p>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>10:50 AM</time></div>
-    <div class="col-md-10">
-      <h4>Introducción a la física de la Luz y al conocimiento básico de los equipos láser <span>Marc Cuellar, MSc.</span></h4>
-      <p>Un vistazo a los principios fundamentales que rigen la tecnología láser en medicina.</p>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>12:00 PM</time></div>
-    <div class="col-md-10">
-      <h4>Interacción de la luz y las células <span>Dra. Flor Arriaga</span></h4>
-      <p>Exploración de cómo la luz láser afecta a las células y tejidos humanos.</p>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>01:00 PM</time></div>
-    <div class="col-md-10">
-      <h4>Asignación de material de lectura y preparación para curso</h4>
-      <p>Recepción de materiales educativos y guía para la preparación previa a las sesiones prácticas.</p>
-    </div>
-  </div>
-</div>
-<!-- End Schedule Day SÁBADO 20 DE ABRIL -->
+    <!-- End Schedule Day SÁBADO 27 DE ABRIL 2024 -->
 
+    <!-- ... Omitido por brevedad ... -->
 
-    <!-- Tab para el VIERNES 26 DE ABRIL -->
-   <!-- Schedule Day VIERNES 26 DE ABRIL -->
-<div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
-  <!-- Eventos del VIERNES 26 DE ABRIL -->
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>08:30 AM</time></div>
-    <div class="col-md-10">
-      <h4>Introducción y bienvenida</h4>
-    </div>
   </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>09:00 AM</time></div>
-    <div class="col-md-10">
-      <h4>El espectro electromagnético y tecnología láser, Modalidades de interacción con los tejidos biológicos <span>Dr. Pedro Martínez</span></h4>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>11:00 AM</time></div>
-    <div class="col-md-10">
-      <h4>Pausa</h4>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>11:20 AM</time></div>
-    <div class="col-md-10">
-      <h4>Técnicas y procedimientos en distintas especialidades médico-quirúrgicas y en el ámbito de las Ciencias de la Salud <span>Dra. Pilar Martín</span></h4>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>01:30 PM</time></div>
-    <div class="col-md-10">
-      <h4>Comida</h4>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>02:30 PM</time></div>
-    <div class="col-md-10">
-      <h4>El láser - uso médico-quirúrgico y terapéutico <span>Dra. Pilar Martín</span></h4>
-      <p>Especialidades: Oftalmología, Ginecología, Urología, Medicina Deportiva, Neurología, Oncología, Otorrinolaringología, Ortopedia y Traumatología, entre otras.</p>
-    </div>
-  </div>
-</div>
-<!-- End Schedule Day VIERNES 26 DE ABRIL -->
-
-
- <!-- Schedule Day VIERNES 26 DE ABRIL -->
-<div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
-  <!-- Eventos del VIERNES 26 DE ABRIL -->
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>08:30 AM</time></div>
-    <div class="col-md-10">
-      <h4>Introducción y bienvenida</h4>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>09:00 AM</time></div>
-    <div class="col-md-10">
-      <h4>El espectro electromagnético y tecnología láser, Modalidades de interacción con los tejidos biológicos <span>Dr. Pedro Martínez</span></h4>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>11:00 AM</time></div>
-    <div class="col-md-10">
-      <h4>Pausa</h4>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>11:20 AM</time></div>
-    <div class="col-md-10">
-      <h4>Técnicas y procedimientos en distintas especialidades médico-quirúrgicas y en el ámbito de las Ciencias de la Salud <span>Dra. Pilar Martín</span></h4>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>01:30 PM</time></div>
-    <div class="col-md-10">
-      <h4>Comida</h4>
-    </div>
-  </div>
-  <div class="row schedule-item">
-    <div class="col-md-2"><time>02:30 PM</time></div>
-    <div class="col-md-10">
-      <h4>El láser - uso médico-quirúrgico y terapéutico <span>Dra. Pilar Martín</span></h4>
-      <p>Especialidades: Oftalmología, Ginecología, Urología, Medicina Deportiva, Neurología, Oncología, Otorrinolaringología, Ortopedia y Traumatología, entre otras.</p>
-    </div>
-  </div>
-</div>
-<!-- End Schedule Day VIERNES 26 DE ABRIL -->
-
-
-
+</section>
 <!-- ======= Venue Section ======= -->
 <section id="venue" class="wow fadeInUp">
   <div class="container-fluid">
