--- a/index.html
+++ b/index.html
@@ -177,14 +177,47 @@
     </ul>
 
     <!-- Contenido de la agenda -->
-    <div class="tab-content">
-      <!-- Contenido del día SÁBADO 20 DE ABRIL -->
-      <div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-4">
-        <!-- Eventos del SÁBADO 20 DE ABRIL -->
-        <div class="row schedule-item">
-          <!-- Aquí van los eventos del Sábado 20 de Abril -->
-        </div>
-      </div>
+   <!-- Schedule Day SÁBADO 20 DE ABRIL -->
+<div role="tabpanel" class="col-lg-9 tab-pane fade show active" id="day-4">
+  <!-- Eventos del SÁBADO 20 DE ABRIL -->
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>09:25 AM</time></div>
+    <div class="col-md-10">
+      <h4>Registro y conexión vía videoconferencia</h4>
+      <p>Comienza tu jornada conectándote con colegas y facilitadores del curso.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>09:30 AM</time></div>
+    <div class="col-md-10">
+      <h4>Presentación del Curso <span>Dra. Flor Arriaga</span></h4>
+      <p>Introducción al curso y objetivos de aprendizaje por parte de la Dra. Arriaga.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>10:50 AM</time></div>
+    <div class="col-md-10">
+      <h4>Introducción a la física de la Luz y al conocimiento básico de los equipos láser <span>Marc Cuellar, MSc.</span></h4>
+      <p>Un vistazo a los principios fundamentales que rigen la tecnología láser en medicina.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>12:00 PM</time></div>
+    <div class="col-md-10">
+      <h4>Interacción de la luz y las células <span>Dra. Flor Arriaga</span></h4>
+      <p>Exploración de cómo la luz láser afecta a las células y tejidos humanos.</p>
+    </div>
+  </div>
+  <div class="row schedule-item">
+    <div class="col-md-2"><time>01:00 PM</time></div>
+    <div class="col-md-10">
+      <h4>Asignación de material de lectura y preparación para curso</h4>
+      <p>Recepción de materiales educativos y guía para la preparación previa a las sesiones prácticas.</p>
+    </div>
+  </div>
+</div>
+<!-- End Schedule Day SÁBADO 20 DE ABRIL -->
+
 
       <!-- Contenido del día VIERNES 26 DE ABRIL -->
       <div role="tabpanel" class="col-lg-9 tab-pane fade" id="day-5">
